# iroha

./: .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose-substrate.yml
.cargo/: config
dex-documentation/: README.md  documentation.md
dex-documentation/demo/: swap_tokens_xyk_pool_v2.txt
dex-documentation/demo/root/: config.json  swap_setup_env_v2.sh
dex-documentation/demo/user_a/: config.json
dex-documentation/demo/user_b/: config.json
dex-documentation/demo/user_c/: config.json
iroha/: Cargo.toml
iroha/src/: asset.rs  block_sync.rs  bridge.rs  config.rs  crypto.rs  dex.rs  domain.rs  event.rs  isi.rs  lib.rs  permission.rs  query.rs  torii.rs  tx.rs  wsv.rs
iroha_client/: Cargo.toml
iroha_client/src/: client.rs  config.rs
iroha_client/tests/: transfer_asset.rs
iroha_client_cli/: Cargo.toml  README.md  config.json
iroha_client_cli/src/: main.rs
iroha_client_no_std/: Cargo.toml
iroha_client_no_std/src/: account.rs  asset.rs  block.rs  bridge.rs  client.rs  config.rs  crypto.rs  domain.rs  event.rs  isi.rs  lib.rs  maintenance.rs  peer.rs  permission.rs  query.rs  torii.rs  tx.rs
iroha_client_no_std/src/model/: account.rs  asset.rs  domain.rs  event.rs  isi.rs  mod.rs  peer.rs  permission.rs  query.rs  tx.rs
iroha_logger/src/: lib.rs
iroha_macro/iroha_derive/src/: lib.rs
iroha_network/: Cargo.toml
iroha_substrate/: Cargo.toml  Dockerfile  README.md  base-config  bin.Dockerfile  config.json  manual.Dockerfile
iroha_substrate/bridge-tester/: Cargo.toml
iroha_substrate/bridge-tester/src/: main.rs
iroha_substrate/parachain/: Cargo.toml
iroha_substrate/parachain/crates/errors/: Cargo.toml
iroha_substrate/parachain/crates/errors/src/: lib.rs
iroha_substrate/parachain/crates/storehouse/: Cargo.toml
iroha_substrate/parachain/crates/storehouse/src/: lib.rs  mock.rs  tests.rs
iroha_substrate/parachain/iroha_runtime/: Cargo.toml
iroha_substrate/parachain/iroha_runtime/runtime/: Cargo.toml
iroha_substrate/parachain/iroha_runtime/runtime/collator/: Cargo.toml
iroha_substrate/parachain/iroha_runtime/runtime/collator/src/: main.rs
iroha_substrate/parachain/iroha_runtime/tests/runtime/: mod.rs
iroha_substrate/parachain/runtime/: Cargo.toml
iroha_substrate/parachain/runtime/collator/: Cargo.toml
iroha_substrate/parachain/runtime/collator/src/: main.rs
iroha_substrate/parachain/runtime/src/: lib.rs  wasm_validation.rs
iroha_substrate/parachain/tests/: lib.rs
iroha_substrate/substrate-api-client/: Cargo.toml  license_header_scs.txt
iroha_substrate/substrate-api-client/src/: events.rs  lib.rs
iroha_substrate/substrate-front-end-template/src/substrate-lib/components/: TxButton.js
iroha_substrate/substrate-node-template/: Cargo1.toml
iroha_substrate/substrate-node-template/node/: Cargo.toml
iroha_substrate/substrate-node-template/node/src/: chain_spec.rs  command.rs  service.rs
iroha_substrate/substrate-node-template/pallets/collateral/: Cargo.toml
iroha_substrate/substrate-node-template/pallets/collateral/src/: lib.rs  mock.rs
iroha_substrate/substrate-node-template/pallets/common/: Cargo.toml
iroha_substrate/substrate-node-template/pallets/common/src/: lib.rs
iroha_substrate/substrate-node-template/pallets/template/: Cargo.toml
iroha_substrate/substrate-node-template/pallets/template/src/: lib.rs  mock.rs  old_lib.rs  tests.rs
iroha_substrate/substrate-node-template/pallets/template/tests/: transactions.rs
iroha_substrate/substrate-node-template/pallets/treasury/: Cargo.toml
iroha_substrate/substrate-node-template/pallets/treasury/src/: lib.rs
iroha_substrate/substrate-node-template/pallets/x-core/: Cargo.toml
iroha_substrate/substrate-node-template/runtime/: Cargo.toml
iroha_substrate/substrate-node-template/runtime/src/: genesis.rs  lib.rs
