[workspace]

members = [
  "iroha",
  "iroha_client",
  "iroha_client_no_std",
  "iroha_client_cli",
  "iroha_macro",
  "iroha_macro/iroha_derive",
  "iroha_network",
  "iroha_substrate/substrate-node-template/node",
  "iroha_substrate/substrate-node-template/pallets/template",
  "iroha_substrate/bridge-tester",
  "iroha_substrate/substrate-api-client",
  "iroha_substrate/substrate-node-template/pallets/treasury",
#  "iroha_substrate/substrate-node-template/pallets/core",
  "iroha_substrate/substrate-node-template/runtime",
]
