[workspace]

members = [
  "iroha",
  "iroha_client",
  "iroha_client_no_std",
  "iroha_client_cli",
  "iroha_macro",
  "iroha_macro/iroha_derive",
  "iroha_network",
  "iroha_substrate/bridge-tester",
#  "iroha_substrate/substrate-node-template/node",
#  "iroha_substrate/substrate-node-template/pallets/template",
#  "iroha_substrate/substrate-node-template/pallets/treasury",
#  "iroha_substrate/substrate-node-template/runtime",
  "iroha_substrate/substrate-iroha-bridge-node/node",
  "iroha_substrate/substrate-iroha-bridge-node/pallets/iroha-bridge",
  "iroha_substrate/substrate-iroha-bridge-node/pallets/treasury",
  "iroha_substrate/substrate-iroha-bridge-node/runtime",
]
