[package]
name = "iroha_client_no_std"
version = "0.1.0"
authors = [ "Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov < <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>" ]
edition = "2018"
description = "Iroha Client (no-std) is a Rust Library which encapsulates network related logic and gives users an ability to interact with Iroha Peers like they are non-distributed application."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "client"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
#iroha = { version = "=0.1.0", path = "../iroha" }
#iroha_network = { version = "=0.1.0", path = "../iroha_network" }
#iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
#iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
async-std = { version = "1.5", features = ["attributes"], default-features = false }
parity-scale-codec = { version = "1.3.1", features = ["derive", "full" ], default-features = false }
#ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
chrono = { version = "0.4.13", features = ["alloc"], default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
#serde_json = "1.0"
#serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"

#[dependencies.sp-core]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'

[features]
default = [ 'std' ]
std = [
    "serde",
    "parity-scale-codec/std",
]