[package]
name = "iroha-parachain"
version = "0.7.22"
authors = ["Soramitsu <https://soramitsu.co.jp/>"]
description = "Iroha parachain."
edition = "2018"

[dependencies]
tiny-keccak = "1.5.0"
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }

parachain = { git = "https://github.com/iceseer/polkadot", package = "polkadot-parachain", tag = "v0.8.8-1" }
runtime = { package = "iroha-runtime", path = "runtime" }

[features]
default = [ "std" ]
std = [
	"runtime/std",
]
