[package]
name = "test-parachains"
version = "0.7.22"
authors = ["Soramitsu <https://soramitsu.co.jp/>"]
description = "Integration tests using the iroha runtime"
edition = "2018"

[dependencies]
tiny-keccak = "1.5.0"
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }

parachain = { package = "polkadot-parachain", path = ".." }
runtime = { package = "iroha-runtime", path = "runtime" }

[features]
default = [ "std" ]
std = [
	"runtime/std",
]
