[package]
name = "iroha-runtime"
version = "0.8.8"
authors = ["Soramitsu <https://soramitsu.co.jp/>"]
description = "Parachain to provide iroha - polkadot connection."
edition = "2018"
build = "build.rs"

[dependencies]
parachain = { git = "https://github.com/paritytech/polkadot", package = "polkadot-parachain", tag = "v0.8.8", default-features = false, features = [ "wasm-api" ] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
tiny-keccak = "1.5.0"
dlmalloc = { version = "0.1.3", features = [ "global" ] }

# We need to make sure the global allocator is disabled until we have support of full substrate externalities
runtime-io = { package = "sp-io", git = "https://github.com/iceseer/substrate", branch = "master", default-features = false, features = [ "disable_allocator" ] }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = [ "std" ]
std = ["parachain/std"]
