[package]
name = "node-template-runtime"
version = "2.0.0-rc4"
authors = ["Anonymous"]
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A runtime that demonstrates using offchain workers"

[package.metadata.substrate]
categories = [
	"runtime",
	"offchain worker",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc4"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.3.1", features = ["derive"], default-features = false }
#collateral = { path = '../pallets/collateral', default-features = false }
treasury = { path = '../pallets/treasury', default-features = false }

#[dependencies.sp-std]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'
#
#[dependencies.sp-transaction-pool]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'
#
#[dependencies.sp-version]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'
#
#[dependencies.sudo]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'pallet-sudo'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'
#
#[dependencies.system]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'frame-system'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-api'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-block-builder'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-inherents'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-io'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-offchain'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-runtime'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-session'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-std'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-version'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.template]
default-features = false
package = 'pallet-template'
path = '../pallets/template'
version = '2.0.0-rc4'

#
## Substrate pallets & dependencies
#frame-executive = { version = '2.0.0-rc4', default-features = false }
#frame-support = { version = '2.0.0-rc4', default-features = false }
#frame-system = { version = '2.0.0-rc4', default-features = false }
#pallet-balances = { version = '2.0.0-rc4', default-features = false }
#pallet-indices = { version = '2.0.0-rc4', default-features = false }
#pallet-randomness-collective-flip = { version = '2.0.0-rc4', default-features = false }
#pallet-sudo = { version = '2.0.0-rc4', default-features = false }
#pallet-timestamp = { version = '2.0.0-rc4', default-features = false }
#pallet-transaction-payment = { version = '2.0.0-rc4', default-features = false }
#sp-api = { version = '2.0.0-rc4', default-features = false }
#sp-block-builder = { version = '2.0.0-rc4', default-features = false }
#sp-core = { version = '2.0.0-rc4', default-features = false }
#sp-inherents = { version = '2.0.0-rc4', default-features = false }
#sp-io = { version = '2.0.0-rc4', default-features = false }
#sp-offchain = { version = '2.0.0-rc4', default-features = false }
#sp-runtime = { version = '2.0.0-rc4', default-features = false }
#sp-session = { version = '2.0.0-rc4', default-features = false }
#sp-std = { version = '2.0.0-rc4', default-features = false }
#sp-transaction-pool = { version = '2.0.0-rc4', default-features = false }
#sp-version = { version = '2.0.0-rc4', default-features = false }
# Recipe Pallets
#offchain-demo = { path = "../../pallets/offchain-demo", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	# Substrate dependencies alphabetically
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
#	"collateral/std",
	"treasury/std",
	"pallet-indices/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"parity-scale-codec/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	# Recipes pallets
	"template/std",
]
