[package]
authors = ['Soramitsu']
description = 'Storehouse module'
name = 'storehouse'
version = '0.1.0'
edition = '2018'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.5'

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.5'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.5'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.pallet-balances]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.errors]
default-features = false
path = '../errors'

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'system/std',
  'errors/std',
  'pallet-balances/std',
]
