[package]
authors = ['Interlay']
description = 'Collateral module'
edition = '2018'
homepage = 'https://interlay.gitlab.io/polkabtc-spec/spec/collateral.html'
name = 'collateral'
version = '2.0.0-rc.4'

[dependencies.serde]
version = '1.0.101'
features = ['derive']
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.system]
default-features = false
package = 'frame-system'
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc.4'
tag = 'v2.0.0-rc4'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-rc.4'
tag = 'v2.0.0-rc4'

[dev-dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
version = '2.0.0-rc.4'
tag = 'v2.0.0-rc4'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
version = '2.0.0-rc.4'
tag = 'v2.0.0-rc4'

[dependencies.x-core]
default-features = false
path = '../x-core'

[features]
default = ['std']
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'system/std',
  'x-core/std',
  'pallet-balances/std',
]
