[package]
name = "common"
version = "2.0.0-rc.4"
authors = ["Interlay Ltd"]
edition = "2018"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[features]
default = ['std']
std = [
  'sp-std/std',
  'frame-support/std',
  'codec/std',
]
