[package]
name = "iroha-runtime-collator"
version = "0.1.0"
authors = ["Soramitsu <https://soramitsu.co.jp/>"]
edition = "2018"

[dependencies]
runtime = { package = "iroha-runtime", path = ".." }
parachain = { package = "polkadot-parachain", path = "../../.." }
collator = { package = "polkadot-collator", path = "../../../../collator" }
primitives = { package = "polkadot-primitives", path = "../../../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
client-api = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "master" }
parking_lot = "0.10.0"
codec = { package = "parity-scale-codec", version = "1.2.0" }
futures = "0.3.4"
